# movie_system_fastapi

./: pyproject.toml
app/: app.py  database.py  oauth2.py  schemas.py
app/models/: post.py  user.py
app/routers/: auth.py  post.py  user.py
tests/: test_model.py
