[tool.poetry]
name = "movie-system-fastapi"
version = "0.1.0"
description = ""
authors = ["leon <90852553+leon0719@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "movie_system_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.103.1"}


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = "^7.4.2"
pre-commit = "^3.4.0"
flake8 = "^6.1.0"
datamodel-code-generator = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
