[tool.poetry]
name = "fastapi-training"
version = "0.1.0"
description = ""
authors = ["leon0719 <leon0970865551@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_training"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.96.0"}
pymongo = "^4.3.3"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.0.1"
psycopg2 = "^2.9.6"
sqlalchemy = "^2.0.16"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pre-commit = "^3.3.2"
flake8 = "^6.0.0"
ipykernel = "^6.23.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
